# pydca

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  README.md  ROADMAP.md  coverage.xml  diagnosis.md  mypy.ini  pyproject.toml  requirements.txt  task.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  publish.yml  workflow.yml
data/: fingerprint.json
decline_analysis/: README.md  __init__.py  __main__.py  data.py  dca.py  economics.py  evaluate.py  example.py  forecast.py  forecast_arima.py  forecast_chronos.py  forecast_prophet.py  forecast_timesfm.py  models.py  monte_carlo.py  multiphase.py  plot.py  profiling.py  reserves.py  sensitivity.py
decline_analysis.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
decline_analysis/utils/: data_loader.py  data_processing.py
decline_curve/: __init__.py  __main__.py  artifacts.py  backtesting.py  batch.py  benchmark_config_example.yaml  calendar.py  cli.py  data_contract.py  data_qa.py  dca.py  decline_variants.py  deep_learning.py  diagnostics.py  downtime.py  econ_spec.py  economics.py  ensemble.py  fit_diagnostics.py  fitting.py  forecast.py  forecast_chronos.py  forecast_deepar.py  forecast_tft.py  forecast_timesfm.py  leakage_check.py  models.py  models_arps.py  models_base.py  monte_carlo.py  multiphase.py  outliers.py  panel_analysis_config_example.yaml  panel_analysis_sweep.py  parameter_resample.py  prms.py  probabilistic_forecast.py  profiling.py  registry.py  reports.py  (+5 more)
decline_curve/utils/: real_data_loader.py
docs/: MONTE_CARLO.md  PERFORMANCE.md  WIP_METHODS_SUMMARY.md  changelog.rst  conf.py  contributing.rst  examples.rst  index.rst  models.rst  quickstart.rst  requirements.txt  tutorial.rst
docs/_build/doctrees/: changelog.doctree  contributing.doctree  examples.doctree  index.doctree  models.doctree  quickstart.doctree  tutorial.doctree
docs/_build/doctrees/api/: data_processing.doctree  dca.doctree  evaluate.doctree  forecast.doctree  models.doctree  multiphase.doctree  plot.doctree
docs/_build/doctrees/source/: data_loader.doctree  economics.doctree  reserves.doctree  sensitivity.doctree
docs/_build/html/: .buildinfo  changelog.html  contributing.html  examples.html  genindex.html  index.html  models.html  objects.inv  py-modindex.html  quickstart.html  search.html  searchindex.js  tutorial.html
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/decline_analysis/: dca.html  economics.html  evaluate.html  forecast.html  forecast_arima.html  forecast_chronos.html  forecast_timesfm.html  models.html  multiphase.html  plot.html  reserves.html  sensitivity.html
docs/_build/html/_sources/: contributing.rst.txt  examples.rst.txt  tutorial.rst.txt
docs/_build/html/_sources/api/: data_processing.rst.txt  plot.rst.txt
docs/_build/html/_sources/source/: data_loader.rst.txt  economics.rst.txt  sensitivity.rst.txt
docs/_build/html/api/: data_processing.html  dca.html  evaluate.html  forecast.html  models.html  multiphase.html  plot.html
docs/_build/html/source/: data_loader.html  economics.html  reserves.html  sensitivity.html
docs/_static/: custom.css
docs/api/: data_processing.rst  dca.rst  evaluate.rst  forecast.rst  models.rst  multiphase.rst  plot.rst
docs/cookbook/: full_economics.rst  index.rst  reserves_classification.rst  shale_variants.rst  type_curve_workflow.rst
docs/source/: data_loader.rst  economics.rst  prms.rst  recommend_model.rst  reserves.rst  scenarios.rst  sensitivity.rst  type_curve_normalization.rst
examples/: 01_basic_dca_analysis.ipynb  02_economic_evaluation.ipynb  03_real_bakken_well_analysis.ipynb  04_advanced_data_processing.ipynb  05_multiphase_forecasting.ipynb  08_deepar_probabilistic_forecasting.ipynb  README.md  benchmark_factory_example.py  monte_carlo_example.py  panel_data_analysis.py  performance_benchmark.py  profiling_example.py  quick_panel_sweep_test.py  run_panel_analysis.py  run_panel_analysis_sweep.py
ndic_raw/: 2023-01.csv
test_env/: pyvenv.cfg
tests/: conftest.py  test_data_loader.py  test_data_processing.py  test_dca.py  test_decline_variants.py  test_deep_learning_integration.py  test_economics.py  test_economics_full.py  test_evaluate.py  test_forecast.py  test_forecast_arima.py  test_models.py  test_multiphase.py  test_panel_data_analysis.py  test_plot.py  test_prms.py  test_recommend_model.py  test_reserves.py  test_scenarios.py  test_sensitivity.py  test_type_curve_normalization.py  test_uncertainty.py
(+2 files in other folders)
