[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "decline_curve"
version = "0.2.0"
description = "Decline curve analysis with multi-phase forecasting, data utilities, and ML models"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
  { name = "Kyle T. Jones", email = "kyletjones@gmail.com" }
]
maintainers = [
  { name = "Kyle T. Jones", email = "kyletjones@gmail.com" }
]
requires-python = ">=3.9"
keywords = [
  "decline-curve-analysis",
  "petroleum-engineering",
  "oil-and-gas",
  "production-forecasting",
  "arps-decline",
  "reserves-estimation",
  "time-series",
  "machine-learning",
  "economic-analysis"
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed"
]
dependencies = [
  "numpy>=1.23",
  "pandas>=2.0",
  "scipy>=1.10",
  "matplotlib>=3.7",
  "statsmodels>=0.14",
  "tqdm>=4.66",
  "numpy-financial>=1.0",
  "requests>=2.25",
  "xlrd>=2.0"
]

[project.optional-dependencies]
ml = [
  "transformers>=4.41",
  "torch>=2.0",
  "accelerate>=0.29",
  "einops>=0.7",
  "prophet>=1.1"
]
dev = [
  "pytest>=7.0",
  "pytest-cov>=4.0",
  "pytest-xdist>=3.0",
  "black>=23.0",
  "isort>=5.12",
  "flake8>=6.0",
  "mypy>=1.0",
  "pre-commit>=3.0"
]
docs = [
  "sphinx>=7.0",
  "sphinx-rtd-theme>=2.0",
  "sphinx-autodoc-typehints>=1.20"
]
examples = [
  "jupyter>=1.0",
  "notebook>=7.0",
  "ipykernel>=6.0"
]
all = [
  "decline_curve[ml,dev,docs,examples]"
]

[project.urls]
Homepage = "https://github.com/kylejones200/pydca"
Documentation = "https://decline-analysis.readthedocs.io/"
Repository = "https://github.com/kylejones200/pydca"
"Bug Tracker" = "https://github.com/kylejones200/pydca/issues"
Changelog = "https://github.com/kylejones200/pydca/blob/main/CHANGELOG.md"

[project.scripts]
decline = "decline_analysis.__main__:main"

[tool.setuptools.packages.find]
include = ["decline_analysis*"]
exclude = ["ndic_raw*"]

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | venv
  )/
)
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
show_error_codes = true
pretty = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
  "-ra",
  "--strict-markers",
  "--strict-config",
  "--cov=decline_analysis",
  "--cov-report=term-missing",
  "--cov-report=html",
]
testpaths = ["tests"]
pythonpath = ["."]

[tool.coverage.run]
source = ["decline_analysis"]
omit = [
  "*/tests/*",
  "*/test_*.py",
  "*/__pycache__/*",
  "*/venv/*",
  "*/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "raise AssertionError",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
  "@abstractmethod",
]
